
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;


 int BUFLEN ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

int getshell(int sock)
{

 char buf[BUFLEN];
 int nread=0;

   while(1)
 {
      fd_set input;
      FD_SET(0,&input);
      FD_SET(sock,&input);
      select(sock+1,&input,((void*)0),((void*)0),((void*)0));

  if(FD_ISSET(sock,&input))
  {
         nread=read(sock,buf,BUFLEN);
         write(1,buf,nread);
       }
       if(FD_ISSET(0,&input))
        write(sock,buf,read(0,buf,BUFLEN));
   }
}
